remove journey repository